--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "build": "miniprogram-ci build"
   },
   "dependencies": {
-    "@vant/weapp": "^1.11.7"
+    "@nutui/nutui-react-taro": "^2.7.4",
+    "@tarojs/components": "^4.0.8",
+    "@tarojs/taro": "^4.0.8",
+    "@types/react": "^18.3.18",
+    "@vant/weapp": "^1.11.7",
+    "react": "^18.3.1",
+    "weui-miniprogram": "^1.5.6"
   },
   "devDependencies": {
     "miniprogram-api-typings": "^3.9.1",
